crates/toml/tests/snapshots/invalid/float/exp-double-e-01.stderr
TOML parse error at line 1, column 20
  |
1 | exp-double-e-1 = 1ee2
  |                    ^
invalid exponent, expected digits

---
TOML parse error at line 1, column 20
  |
1 | exp-double-e-1 = 1ee2
  |                    ^^
invalid float, expected nothing
